attempted to fix mobile overflow issue again

--- a/src/css/_layout.scss
+++ b/src/css/_layout.scss
@@ -33,7 +33,7 @@
     }
 
     .container {
-        padding: 5rem;
+        padding-bottom: 5rem;
     }
 }
 
